--- a/UI/Views/TestDetailsView.xaml
+++ b/UI/Views/TestDetailsView.xaml
@@ -37,8 +37,8 @@
                    ContentStringFormat="Оцінка: {0}"
                    FontSize="24"
                    Visibility="{Binding LastTestAttempt.HasGrade, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
-            
-            <Label Content="{Binding Test.MaxGrade, FallbackValue='NULL'}"
+
+            <Label Content="{Binding Test.MaxPossibleGrade, FallbackValue='NULL'}"
                    ContentStringFormat="Максимальний бал: {0}"
                    FontSize="24"
                    Visibility="{Binding HasLastTestAttempt, Converter={StaticResource BoolToVis}}"/>
@@ -51,24 +51,24 @@
             <Label Content="{Binding Test.TimeLimit, FallbackValue='NULL'}"
                    ContentStringFormat="Час на проходження: {0}"
                    FontSize="24"
-                   Visibility="{Binding Test.HasTimer, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
+                   Visibility="{Binding Test.HasTimeLimit, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
             
             <Label Content="{Binding LastTestAttempt.LeftoverTime, FallbackValue='NULL'}"
                    ContentStringFormat="Залишковий час після проходження: {0:hh\:mm\:ss}"
                    FontSize="24"
                    Visibility="{Binding LastTestAttempt.HasLeftoverTime, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
-            <Label Content="{Binding Test.TerminLocal, FallbackValue='NULL'}"
+            <Label Content="{Binding Test.Termin, FallbackValue='NULL'}"
                    ContentStringFormat="Закривається о {0:HH:mm:ss dd.MM.yyyy}"
                    FontSize="24"
                    Visibility="{Binding Test.HasTermin, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
-            <Label Content="{Binding LastTestAttempt.StartedAtLocal, FallbackValue='NULL'}"
+            <Label Content="{Binding LastTestAttempt.StartedAt, FallbackValue='NULL'}"
                    ContentStringFormat="Почато о {0:HH:mm:ss dd.MM.yyyy}"
                    FontSize="24"
                    Visibility="{Binding HasLastTestAttempt, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
 
-            <Label Content="{Binding LastTestAttempt.EndedAtLocal, FallbackValue='NULL'}"
+            <Label Content="{Binding LastTestAttempt.EndedAt, FallbackValue='NULL'}"
                    ContentStringFormat="Завершено о {0:HH:mm:ss dd.MM.yyyy}"
                    FontSize="24"
                    Visibility="{Binding LastTestAttempt.WasEnded, FallbackValue=Collapsed, Converter={StaticResource BoolToVis}}"/>
